[fixes #16461141] improve visibility of org name in header

--- a/app/stylesheets/partials/_header.sass
+++ b/app/stylesheets/partials/_header.sass
@@ -26,7 +26,7 @@
       top: -3px
 
     p
-      color: $light-blue
+      color: white
       font-size: 0.6em
       letter-spacing: 0.02em
       padding-left: 55px
@@ -147,17 +147,13 @@ body.promo.landing #admin p
     width: auto
 
     p
-      color: $light-blue
       float: left
       font-size: 14px
       font-weight: normal
       margin-top: 2px
       padding: 0
       text-transform: none
-      +opacity(0.8)
       +text-shadow(#000, 0, 1px, 1px)
-      &:hover
-        +opacity(1)
 
   /* app logo styles end */
 
